[package]
name = "rust_kalkulator"
authors = ["Szymon Olesiński"]
version = "0.1.0"
edition = "2021"
license = "GNU General Public License v3.0"
license-file = "LICENSE"
description = "Prosty kalkulator napisany w języku rust"
readme = "README.md"
homepage = "http://kodujzlinuxem.pl"
repository = "https://github.com/bold663key/rust_kalkulator/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
